--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,50 @@
+.btn-primary-outline {
+  background-color: transparent;
+  border-color: #ccc;
+  border: 0;
+}
+
+.posttitle {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 13px;
+  color: #474747;
+}
+
+.footer-nav {
+  height: 50px;
+  position: -webkit-sticky;
+  border-radius: 5px;
+  right: 15px;
+}
+
+.rem14 {
+  width: 14rem;
+}
+
+.px30 {
+  width: 30px;
+  height: 30px;
+}
+
+.px15 {
+  width: 15px;
+  height: 15px;
+}
+
 .liste-yeni {
-  font-size: 13px; 
+  font-size: 13px;
   font-weight: bold;
 }
-.sgr{
+
+.sgr {
   color: rgb(160, 180, 183)
 }
 
-.sblck{
+.sblck {
   color: #212529;
 }
 
-.br-50{
+.br-50 {
   border-radius: 50%;
 }
 
@@ -25,14 +59,16 @@ input.searche {
   max-width: 500px;
   background-color: #eef3f8;
   border: 0;
+  margin-right: 40px;
 }
 
 input.searche::placeholder {
   font-size: 14px;
   color: gray;
-  background-image: url('./assets/search-solid.svg');
+  background-image: url('/assets/search-solid.svg');
   background-repeat: no-repeat;
-  background-size: 7%;
+  background-size: 10%;
+  background-position: right;
 }
 
 .body {
@@ -75,6 +111,7 @@ i {
   color: gray;
   margin-top: 8px;
 }
+
 i:hover {
   color: black;
 }
@@ -83,6 +120,7 @@ input.content {
   border-radius: 40px;
   height: 45px;
 }
+
 input.content::placeholder {
   font-weight: bolder;
   font-size: 14px;
@@ -103,8 +141,7 @@ div.card {
 }
 
 .view {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 12px;
   font-weight: bold;
   color: #5f5f5f;
@@ -118,15 +155,13 @@ div.card {
 
 li {
   font-size: 14px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
 }
 
 .link {
   font-size: 12px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #5f5f5f;
 }
 
@@ -143,10 +178,9 @@ button.ref:hover {
   width: 50px;
   height: 50px;
 }
+
 .posttext {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
   font-size: 14px;
-  margin-left: 8px;
 }
